--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             color: white;
         }
         img {
-            max-width: 600px;
-            max-height: 600px;
+            width: 600px;
+            height: 600px;
             display: block;
             margin: 0 auto 20px auto;
         }
