--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
             border: 2px solid #B2DFDB; /* 더 시원한 색상 */
             border-radius: 10px;
         }
-        .link-container {
-            width: 100%;
-            text-align: center;
-            padding: 50px;
-        }
+
         .map-container {
             width: 60%;
             min-width: 300px; /* 최소 너비 설정 */
@@ -65,7 +61,7 @@
             padding: 20px; /* 여백 추가 */
         }
         form {
-            width: 100%;
+            width: 80%;
             margin-top: 20px;
             align-content: center;
 
@@ -98,13 +94,14 @@
         }
         #result {
             margin-top: 20px;
-            width: 90%;
+            align-content: center;
+            width: 80%;
 
-            background: #E0F2F1; /* 밝고 시원한 배경색 */
+            background: #f8fafa; 밝고 시원한 배경색
             padding: 20px;
             border-radius: 10px;
-            display: inline-block;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* display: inline-block; */
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
         }
         table {
             width: 100%;
