--- a/map.html
+++ b/map.html
@@ -9,6 +9,8 @@
             color: #333333;
             text-align: center;
             padding: 20px;
+            font-size: 20px;
+
         }
    
         #map {
